--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 1433:1433
     environment:
-      ACCEPT_EULA: Y
+      ACCEPT_EULA: 'Y'
       SA_PASSWORD: PasswordO1.
       MSSQL_PID: Express
     volumes:
